2008-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eshell/esh-cmd.el (eshell-manipulate): Check eshell-debug-command
	is bound before using it.

2008-06-25  Kenichi Handa  <handa@m17n.org>

	* image.el (image-jpeg-p): Convert DATA to unibyte at first.

2008-06-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el:
	* vc-git.el: Require vc-dir when compiling.

	* vc-dir.el (vc-dir-marked-only-files-and-states): Rename from
	vc-dir-marked-only-files.  Change the return value.
	(vc-dir-child-files-and-states): Rename from vc-dir-child-files.
	Change the return value.
	(vc-dir-deduce-fileset): New function broken out from ...
	* vc.el (vc-deduce-fileset): ... here and ...
	(vc-deduce-fileset): ... here.

	* vc-svn.el (vc-annotate-parent-rev): Pacify byte compiler.
	(vc-svn-parse-status): Do not set the vc-backend property.

2008-06-25  Andreas Schwab  <schwab@suse.de>

	* faces.el (face-font-family-alternatives, variable-pitch):
	Use "Sans Serif", not "Sans-Serif".

2008-06-24  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (face-font-family-alternatives, variable-pitch):
	Change "Sans" to the canonical name "Sans-Serif".

2008-06-24  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-mode-map): Add extra keybindings to
	`calc-missing-key'.
	* calc/calc-ext.el (calc-init-extensions): Add keybinding for
	`kill-ring-save'.

2008-06-24  Miles Bader  <miles@gnu.org>

	* mouse.el (mouse-appearance-menu): Don't do anything if the user
	pops up the menu but doesn't select anything.

2008-06-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* add-log.el (add-change-log-entry): Add new arg to force each new
	entry to be on a new line.
	* diff-mode.el (diff-add-change-log-entries-other-window): Use it.

	* vc-dir.el (vc-client-object): Remove.
	(vc-dir-prepare-status-buffer): Take a backend as an argument and
	use it when looking for a buffer.
	(vc-dir): Add a backend argument.  Set revert-buffer-function.
	Don't create a client object.  Move bindings ...